[package]
name = "anchor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.smithay]
default-features = false
# features = ["desktop", "wayland_frontend"]
features = ["desktop", "wayland_frontend", "udev", "backend_udev", "backend_session", "backend_libinput", "backend_winit"]
git = "https://github.com/Smithay/smithay"

[dependencies]
xcursor = "0.3.5"
